--- a/data/procesos/app.html
+++ b/data/procesos/app.html
@@ -2,31 +2,30 @@
 	<div class="row">
 		<div class="col-sm-12">
 			<div class="tabbable">
-				<ul class="nav nav-tabs" id="myTab">
-					<li class="active">
-						<a data-toggle="tab" href="#preentre">
+				<ul class="nav nav-tabs " id="myTab">
+					<li ng-class="{ active: isSet(1) }">
+						<a href ng-click="setTab(1)">
 							<i class="green ace-icon fa fa-pencil-square-o"></i>
 							Pre Entrevista
 						</a>
 					</li>
 
-					<li>
-						<a data-toggle="tab" href="#entrevista">
+					<li ng-class="{ active: isSet(2) }">
+						<a href ng-click="setTab(2)">
 							Entrevista
 							<i class="blue ace-icon fa fa-inbox"></i>
 						</a>
 					</li>
 
-					<li>
-						<a data-toggle="tab" href="#postentre">
+					<li ng-class="{ active: isSet(3) }">
+						<a href ng-click="setTab(3)">
 							Post Entrevista
 							<i class="pink ace-icon fa fa-thumbs-o-up"></i>
 						</a>
 					</li>
 				</ul>
-
 				<div class="tab-content">
-					<div id="preentre" class="tab-pane fade in active">
+					<div ng-show="isSet(1)">
 						<!--Empezando con los datos de los invitados/Row primero-->
 						<div class="row">
 							<div class="col-sm-4">
@@ -260,13 +259,12 @@
 							</div>
 						</div>
 					</div>
-
-					<div id="entrevista" class="tab-pane fade">
-						<p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid.</p>
+					<div ng-show="isSet(2)">
+						<p>entrevistas</p>
 					</div>
 
-					<div id="postentre" class="tab-pane fade">
-						<p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin.</p>
+					<div  ng-show="isSet(3)">
+						<p>postentrevistas</p>
 					</div>
 				</div>
 			</div>
