--- a/data/procesos/app.html
+++ b/data/procesos/app.html
@@ -51,10 +51,9 @@
 										<div class="profile-info-name"> Hora: </div>
 
 										<div class="profile-info-value">
-											<span class="editable" id="hora">12:00</span>
+											<span class="editable" id="horauno">12:00</span>
 										</div>
 									</div>
-
 									<div class="profile-info-row">
 										<div class="profile-info-name"> Forma: </div>
 
@@ -260,9 +259,142 @@
 						</div>
 					</div>
 					<div ng-show="isSet(2)">
-						<p>entrevistas</p>
-					</div>
+						<div class="row">
+							<div class="col-sm-6">
+								<h3 class="bigger-175 green">Preguntas Tema 1:</h3>
+									<div class="profile-user-info profile-user-info-striped">
+										<div class="profile-info-row">
 
+											<div class="profile-info-value">
+												<span class="editable" id="contactado_por">...</span>
+											</div>
+										</div>
+
+										<div class="profile-info-row">
+
+											<div class="profile-info-value">
+												<span class="editable" id="hora">...</span>
+											</div>
+										</div>
+
+										<div class="profile-info-row">
+
+											<div class="profile-info-value">
+												<span class="editable" id="forma">...</span>
+											</div>
+										</div>
+									</div>
+							</div>
+							<div class="col-sm-6">
+							<h3 class="bigger-175 green">Preguntas Tema 2:</h3>
+								<div class="profile-user-info profile-user-info-striped">
+									<div class="profile-info-row">
+
+										<div class="profile-info-value">
+											<span class="editable" id="preconfirmado_por">...</span>
+										</div>
+									</div>
+
+									<div class="profile-info-row">
+
+										<div class="profile-info-value">
+											<span class="editable" id="hora2">...</span>
+										</div>
+									</div>
+
+									<div class="profile-info-row">
+
+										<div class="profile-info-value">
+											<span class="editable" id="forma2">...</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-sm-6">
+							<h3 class="bigger-175 green">Hora LLegada:</h3>
+									<div class="profile-user-info profile-user-info-striped">
+										<div class="profile-info-row">
+											<div class="profile-info-name"> Hora de Llegada: </div>
+												<div class="profile-info-value">
+													<span class="editable" id="contactado_por">12:00</span>
+												</div>
+											</div>
+									</div>
+							</div>
+							<div class="col-sm-6">
+							<h3 class="bigger-175 green">Tiempo Entrevista:</h3>
+								<div class="profile-user-info profile-user-info-striped">
+									<div class="profile-info-row">
+										<div class="profile-info-name"> Tiempo de Entrevista: </div>
+											<div class="profile-info-value">
+												<span class="editable" id="hora">De ... a ...</span>
+											</div>
+										</div>
+									</div>
+							</div>
+						</div>
+							<div class="row">
+								<div class="col-sm-6">
+								<h3 class="bigger-175 green">Director del Programa:</h3>
+										<div class="profile-user-info profile-user-info-striped">
+											<div class="profile-info-row">
+												<div class="profile-info-name"> Director: </div>
+													<div class="profile-info-value">
+														<span class="editable" id="contactado_por">Nombre</span>
+													</div>
+												</div>
+										</div>
+								</div>
+								<div class="col-sm-6">
+								<h3 class="bigger-175 green">Conducción de Entrevista:</h3>
+									<div class="profile-user-info profile-user-info-striped">
+										<div class="profile-info-row">
+											<div class="profile-info-name"> Conducción: </div>
+												<div class="profile-info-value">
+													<span class="editable" id="hora">Nombre</span>
+												</div>
+											</div>
+										</div>
+								</div>
+						</div>
+							<div class="row">
+								<div class="col-sm-3">
+								<h3 class="bigger-175 green">Ayúdenos a Mejorar:  Qué le pareció la Entrevista?:</h3>
+									<span class="help-inline col-xs-12 col-sm-7">
+										<label class="middle">
+											<input class="ace" type="checkbox" id="id-disable-check" />
+											<span class="lbl"> Mala</span>
+										</label>
+									</span>
+								</div>
+								<div class="col-sm-3">
+									<span class="help-inline col-xs-12 col-sm-7">
+										<label class="middle">
+											<input class="ace" type="checkbox" id="id-disable-check" />
+											<span class="lbl"> Regular</span>
+										</label>
+									</span>
+								</div>
+								<div class="col-sm-3">
+									<span class="help-inline col-xs-12 col-sm-7">
+										<label class="middle">
+											<input class="ace" type="checkbox" id="id-disable-check" />
+											<span class="lbl"> Buena</span>
+										</label>
+									</span>
+								</div>
+								<div class="col-sm-3">
+									<span class="help-inline col-xs-12 col-sm-7">
+										<label class="middle">
+											<input class="ace" type="checkbox" id="id-disable-check" />
+											<span class="lbl"> Muy Buena</span>
+										</label>
+									</span>
+								</div>
+							</div>
+					</div>
 					<div  ng-show="isSet(3)">
 						<p>postentrevistas</p>
 					</div>
