--- a/data/procesos/app.html
+++ b/data/procesos/app.html
@@ -73,7 +73,7 @@
 								</div>
 							</div>
 							<div class="col-sm-4">
-							<h3 class="bigger-175 green">Preconfirmado</h3>
+							<h3 class="bigger-175 green">Preconfirmado:</h3>
 								<div class="profile-user-info profile-user-info-striped">
 									<div class="profile-info-row">
 										<div class="profile-info-name"> Preconfirmado por: </div>
@@ -117,7 +117,7 @@
 								</div>
 							</div>
 							<div class="col-sm-4">
-							<h3 class="bigger-175 green">Confirmado</h3>
+							<h3 class="bigger-175 green">Confirmado:</h3>
 								<div class="profile-user-info profile-user-info-striped">
 									<div class="profile-info-row">
 										<div class="profile-info-name"> Confirmado por: </div>
@@ -162,8 +162,41 @@
 							</div>
 						</div>
 						<div class="row">
+						<h3 class="bigger-175 green">&nbsp; Seguimiento</h3>
+							<div class="col-sm-4">
+								<div class="profile-user-info profile-user-info-striped">
+									<div class="profile-info-row">
+										<div class="profile-info-name"> Firma del Responsable: </div>
+											<div class="profile-info-value">
+												<span class="editable" id="confirmado_con">Nombre</span>
+											</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-4">
+								<div class="profile-user-info profile-user-info-striped">
+									<div class="profile-info-row">
+										<div class="profile-info-name"> Firma del Responsable: </div>
+											<div class="profile-info-value">
+												<span class="editable" id="confirmado_con">Nombre</span>
+											</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-4">
+								<div class="profile-user-info profile-user-info-striped">
+									<div class="profile-info-row">
+										<div class="profile-info-name"> Firma del Responsable: </div>
+											<div class="profile-info-value">
+												<span class="editable" id="confirmado_con">Nombre</span>
+											</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+						<h3 class="bigger-175 green">&nbsp; Datos del Invitado:</h3>
 							<div class="col-sm-6">
-							<h3 class="bigger-175 green">Datos del Invitado:</h3>
 								<div class="profile-user-info profile-user-info-striped">
 									<div class="profile-info-row">
 										<div class="profile-info-name"> Invitado: </div>
@@ -210,6 +243,43 @@
 
 										<div class="profile-info-value">
 											<span class="editable" id="telefono3">+593-0968265276</span>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-sm-6">
+							<h3 class="bigger-175 green">&nbsp; Hora de Invitación:</h3>
+								<div class="profile-user-info profile-user-info-striped">
+									<div class="profile-info-row">
+										<div class="profile-info-name"> 6:10 </div>
+
+										<div class="profile-info-value">
+											<span class="editable" id="nombre_invitado">...</span>
+										</div>
+									</div>
+
+									<div class="profile-info-row">
+										<div class="profile-info-name"> 6:40 </div>
+
+										<div class="profile-info-value">
+											<span class="editable" id="nom_contacto">...</span>
+										</div>
+									</div>
+
+									<div class="profile-info-row">
+										<div class="profile-info-name"> 7:00 </div>
+
+										<div class="profile-info-value">
+											<span class="editable" id="inst_empresa">...</span>
+										</div>
+									</div>
+
+									<div class="profile-info-row">
+										<div class="profile-info-name"> 7:30 </div>
+
+										<div class="profile-info-value">
+											<span class="editable" id="telefono1">...</span>
 										</div>
 									</div>
 								</div>
