Proceso de Guardado
Proceso de Guardado de los Invitados

--- a/data/programas/app.html
+++ b/data/programas/app.html
@@ -37,7 +37,7 @@
 
 			<div class="widget-body">
 				<div class="widget-main">
-					<form class="form-horizontal" id="form_proceso">
+					<form class="form-horizontal" id="form_programas">
 						<div class="form-group">
 							<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Código del Programa:</label>
 							<div class="col-xs-12 col-sm-8">
@@ -103,7 +103,7 @@
 
 			<div class="widget-body">
 				<div class="widget-main">
-					<form class="form-horizontal" id="form_proceso2">
+					<form class="form-horizontal" id="form_programas2">
 						<div class="form-group">
 							<label class="control-label col-xs-12 col-sm-3 no-padding-right" >Código del Programa:</label>
 							<div class="col-xs-12 col-sm-9">
