--- a/data/programas/app.html
+++ b/data/programas/app.html
@@ -64,12 +64,12 @@
 			</div>
 		</div>
 		<hr>
-		<!-- tabla -->
+		<!-- tabla programas-->
 		<table id="tbt_programas" class="table table table-striped">
 			<thead>
 				<tr>
 					<th class="center">Nro</th>
-					<th>Codigo</th>
+					<th>Código</th>
 					<th>Nombre</th>					
 					<th>Proceso</th>	
 				</tr>
@@ -131,6 +131,19 @@
 				</div>
 			</div>
 		</div>
+		<hr>
+		<!-- tabla fichas-->
+		<table id="tbt_fichas" class="table table table-striped">
+			<thead>
+				<tr>
+					<th class="center">Nro</th>
+					<th>Código del Programa</th>
+					<th>Ficha</th>					
+					<th>Proceso</th>	
+				</tr>
+			</thead>
+			<tbody></tbody>
+		</table>
 	</div><!-- /.col -->
 </div>
 <!-- modal para actualizar los programas -->
@@ -152,6 +165,31 @@
 		      <div class="profile-info-row">
 					<div class="profile-info-name"> Nombre del Programa: </div>
 					<div class="profile-info-value" id="obj_nombre">
+					</div>
+			  </div>
+		  </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+<!-- modal para actualizar las Fichas -->
+<div id="modal-actualizar-fichas" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modificar Fichas</h4>
+      </div>
+      <div class="modal-body">
+	      <div class="profile-user-info profile-user-info-striped">
+		      <div class="profile-info-row">
+					<div class="profile-info-name"> Código de Ficha: </div>
+					<div class="profile-info-value" id="obj_cod_ficha">
 					</div>
 				</div>
 		  </div>
