--- a/data/procesos/app.html
+++ b/data/procesos/app.html
@@ -36,7 +36,7 @@
 					<div class="tab-content">						
 						<!-- inicio del set 1 -->
 						<div ng-show="isSet(1)">
-							<form class="form-horizontal disabled" id="form_proceso1">
+							<form class="form-horizontal" id="form_proceso1">
 								<!--Empezando con los datos de los invitados/Row primero-->
 								<h3 class="header smaller blue">
 									&nbsp; Estado de la entrevista: 
