--- a/data/programas/app.html
+++ b/data/programas/app.html
@@ -137,7 +137,7 @@
 			<thead>
 				<tr>
 					<th class="center">Nro</th>
-					<th>Código del Programa</th>
+					<th>Nombre del Programa</th>
 					<th>Ficha</th>					
 					<th>Proceso</th>	
 				</tr>
