--- a/data/prueba_form/app.html
+++ b/data/prueba_form/app.html
@@ -18,17 +18,17 @@
 												<span class="title">Pre Entrevista</span>
 											</li>
 
-											<li data-step="2">
+											<li data-step="2" class="active">
 												<span class="step">2</span>
 												<span class="title">Entrevista</span>
 											</li>
 
-											<li data-step="3">
+											<li data-step="3" class="active">
 												<span class="step">3</span>
 												<span class="title">Post Entrevista</span>
 											</li>
 
-											<li data-step="4">
+											<li data-step="4" class="active">
 												<span class="step">4</span>
 												<span class="title">Guardar Datos</span>
 											</li>
@@ -58,7 +58,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Contactado por:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_contactado_por" id="txt_contactado_por" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_contactado_por" id="txt_contactado_por" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -88,7 +88,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Forma:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_forma" id="txt_forma" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_forma" id="txt_forma" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -96,7 +96,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Contactado con:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_contactado_con" id="txt_contactado_con" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_contactado_con" id="txt_contactado_con" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -113,7 +113,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Preconfirmado por:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_preconfirmado_por" id="txt_preconfirmado_por" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_preconfirmado_por" id="txt_preconfirmado_por" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -143,7 +143,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Forma:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_forma2" id="txt_forma2" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_forma2" id="txt_forma2" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -151,7 +151,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Preconfirmado con:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_preconfirmado_con" id="txt_preconfirmado_con" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_preconfirmado_con" id="txt_preconfirmado_con" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -168,7 +168,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Confirmado por:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_confirmado_por" id="txt_confirmado_por" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_confirmado_por" id="txt_confirmado_por" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -198,7 +198,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Forma:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_forma3" id="txt_forma3" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_forma3" id="txt_forma3" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -206,7 +206,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Confirmado con:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_confirmado_con" id="txt_confirmado_con" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_confirmado_con" id="txt_confirmado_con" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -257,7 +257,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Invitado:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_invitado" id="txt_invitado" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_invitado" id="txt_invitado" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -265,7 +265,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Contacto:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_contacto" id="txt_contacto" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_contacto" id="txt_contacto" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -273,7 +273,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Inst/Empresa:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_empresa" id="txt_empresa" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_empresa" id="txt_empresa" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -381,7 +381,7 @@
 																	<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Dirección:</label>
 																	<div class="col-xs-12 col-sm-8">
 																		<div class="clearfix">
-																			<input type="text" name="txt_direccion" id="txt_direccion" class="col-xs-12 input-sm"/>
+																			<input type="text" style="text-transform:uppercase" name="txt_direccion" id="txt_direccion" class="col-xs-12 input-sm"/>
 																		</div>
 																	</div>
 																</div>
@@ -405,7 +405,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Tema Principal</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_principal" id="txt_principal" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_principal" id="txt_principal" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -413,7 +413,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Tema Secundario</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_secundario" id="txt_secundario" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_secundario" id="txt_secundario" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -424,7 +424,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Nombre 1:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_nombre1" id="txt_nombre1" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_nombre1" id="txt_nombre1" class="col-xs-12 input-sm"/>
 																	</div>
 															</div>
 																</div>
@@ -432,7 +432,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Nombre 2:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_nombre2" id="txt_nombre2" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_nombre2" id="txt_nombre2" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -454,7 +454,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Pregunta:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_pregunta1" id="txt_pregunta1" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_pregunta1" id="txt_pregunta1" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -462,7 +462,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Pregunta:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_pregunta2" id="txt_pregunta2" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_pregunta2" id="txt_pregunta2" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -470,7 +470,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Pregunta:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_pregunta3" id="txt_pregunta3" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_pregunta3" id="txt_pregunta3" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -481,7 +481,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Pregunta:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_pregunt4" id="txt_pregunta4" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_pregunt4" id="txt_pregunta4" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -489,7 +489,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Pregunta:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_pregunta5" id="txt_pregunta5" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_pregunta5" id="txt_pregunta5" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -497,7 +497,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Pregunta:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<input type="text" name="txt_pregunta6" id="txt_pregunta6" class="col-xs-12 input-sm"/>
+																		<input type="text" style="text-transform:uppercase" name="txt_pregunta6" id="txt_pregunta6" class="col-xs-12 input-sm"/>
 																	</div>
 																</div>
 															</div>
@@ -541,7 +541,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Director:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<select id="select_usuarios4" name="select_usuarios4" class="select2" data-placeholder="Responsable..."></select> 
+																		<select id="select_usuarios4" name="select_usuarios4" class="select2" data-placeholder="Director..."></select> 
 																	</div>
 																</div>
 															</div>
@@ -552,7 +552,7 @@
 																<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Conducción:</label>
 																<div class="col-xs-12 col-sm-8">
 																	<div class="clearfix">
-																		<select id="select_usuarios5" name="select_usuarios5" class="select2" data-placeholder="Responsable..."></select> 
+																		<select id="select_usuarios5" name="select_usuarios5" class="select2" data-placeholder="Conducción..."></select> 
 																	</div>
 																</div>
 															</div>
@@ -565,7 +565,7 @@
 													<div class="col-sm-3">
 														<div class="radio">
 															<label>
-																<input name="rb_mala" type="radio" class="ace input-lg" />
+																<input name="rb_mala" value="rb_mala" type="radio" class="ace input-lg" />
 																<span class="lbl bigger-120"> Mala</span>
 															</label>
 														</div>
@@ -573,7 +573,7 @@
 													<div class="col-sm-3">
 														<div class="radio">
 															<label>
-																<input name="rb_regular" type="radio" class="ace input-lg" />
+																<input name="rb_regular" value="rb_regular" type="radio" class="ace input-lg" />
 																<span class="lbl bigger-120"> Regular</span>
 															</label>
 														</div>
@@ -581,7 +581,7 @@
 													<div class="col-sm-3">
 														<div class="radio">
 															<label>
-																<input name="rb_buena" type="radio" class="ace input-lg" />
+																<input name="rb_buena" value="rb_buena" type="radio" class="ace input-lg" />
 																<span class="lbl bigger-120"> Buena</span>
 															</label>
 														</div>
@@ -589,7 +589,7 @@
 													<div class="col-sm-3">
 														<div class="radio">
 															<label>
-																<input name="rb_muybuena" type="radio" class="ace input-lg" />
+																<input name="rb_muybuena" value="rb_muybuena" type="radio" class="ace input-lg" />
 																<span class="lbl bigger-120"> Muy Buena</span>
 															</label>
 														</div>
@@ -600,7 +600,7 @@
 												<div class="row">
 													<div class="col-sm-12">
 													<h3 class="header smaller blue">&nbsp; Sugerencias del Invitado</h3>
-														<textarea class="form-control" name="txta_sugerencia" id="form-field-8" placeholder="Sugerencias del Invitado"></textarea>
+														<textarea class="form-control" style="text-transform:uppercase" name="txta_sugerencia" id="form-field-8" placeholder="Sugerencias del Invitado"></textarea>
 													</div>
 												</div>
 												<!-- FIN DEL QUINTO ROW -->
@@ -615,7 +615,7 @@
 													<div class="form-group">
 														<div class="col-sm-12">
 														<h3 class="header smaller blue">&nbsp; Observaciones</h3>
-															<textarea class="form-control" id="form-field-8" placeholder="Observaciones"></textarea>
+															<textarea class="form-control" style="text-transform:uppercase" id="form-field-8" placeholder="Observaciones"></textarea>
 														</div>
 													</div>
 												</div>
