--- a/data/home/app.html
+++ b/data/home/app.html
@@ -1,9 +1,9 @@
 <div class="page-header">
 	<h1>
-		Page estos es una prueba
+		Pagina Principal
 		<small>
 			<i class="ace-icon fa fa-angle-double-right"></i>
-			3 styles with inline editable feature
+			OyeFm.com
 		</small>
 	</h1>
 </div><!-- /.page-header -->
