--- a/data/personal/app.html
+++ b/data/personal/app.html
@@ -44,7 +44,7 @@
 													<div class="col-sm-6">
 														<div class="form-group">
 															<label class="control-label col-xs-12 col-sm-2 no-padding-right" >Fecha de Aplicación:</label>
-															<div class="col-xs-12 col-sm-6">
+															<div class="col-xs-12 col-sm-5">
 																<div class="input-group input-group-sm">
 																	<input type="text" id="txt_fecha_aplicacion" name="txt_fecha_aplicacion" class="form-control datepicker" />
 																	<span class="input-group-addon">
@@ -58,7 +58,7 @@
 														<div class="form-group">
 															<div class="col-xs-12 col-sm-4 col-sm-offset-4">
 																<label>
-																	<input name="agree" id="agree" type="checkbox" class="ace" />
+																	<input name="inp_relacion" id="inp_relacion" type="checkbox" class="ace" />
 																	<span class="lbl"> Relación de Dependencia</span>
 																</label>
 															</div>
@@ -105,7 +105,7 @@
 															<label class="control-label col-xs-12 col-sm-5 no-padding-right" >Edad:</label>
 															<div class="col-xs-12 col-sm-3">
 																<div class="clearfix">
-																	<input type="text" style="text-transform:uppercase" name="txt_edad" id="txt_edad" class="col-xs-12 input-sm"/>
+																	<input type="text" style="text-transform:uppercase" name="txt_edad" id="txt_edad" readonly class="col-xs-12 input-sm"/>
 																</div>
 															</div>
 
@@ -156,10 +156,10 @@
 																	<div class="clearfix">
 																		<select id="select_civil" name="select_civil" class="select2" data-placeholder="Estado Civil...">
 																		<option value="">&nbsp;</option>
-																		<option value="AL">Soltero</option>
-																		<option value="AK">Casado</option>
-																		<option value="AK">Divorciado</option>
-																		<option value="AK">Viudo</option>
+																		<option value="Soltero">Soltero</option>
+																		<option value="Casado">Casado</option>
+																		<option value="Divorciado">Divorciado</option>
+																		<option value="Viudo">Viudo</option>
 																		</select>
 																	</div>
 																</div>
@@ -268,7 +268,7 @@
 															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Curso realizado:</label>
 															<div class="col-xs-12 col-sm-8">
 																<div class="clearfix">
-																	<textarea class="form-control" style="text-transform:uppercase" name="txta_curso1" id="form-field-8" placeholder="Cursos Realizados"></textarea>
+																	<textarea class="form-control" style="text-transform:uppercase" name="txta_curso2" id="form-field-8" placeholder="Cursos Realizados"></textarea>
 																</div>
 															</div>
 														</div>
@@ -276,7 +276,7 @@
 															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Establecimiento:</label>
 															<div class="col-xs-12 col-sm-8">
 																<div class="clearfix">
-																	<textarea class="form-control" style="text-transform:uppercase" name="txta_establecimiento" id="form-field-8" placeholder="Establecimiento"></textarea>
+																	<textarea class="form-control" style="text-transform:uppercase" name="txta_establecimiento2" id="form-field-8" placeholder="Establecimiento"></textarea>
 																</div>
 															</div>
 														</div>
@@ -343,30 +343,33 @@
 													<h3 class="header smaller blue"></h3>
 													<div class="col-sm-4">
 														<div class="form-group">
+															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >País:</label>
+															<div class="col-xs-12 col-sm-8">
+																<div class="clearfix">
+																	<select id="select_pais" name="select_pais" class="select2" data-placeholder="Pais...">
+																	</select>
+																</div>
+															</div>
+														</div>
+													</div>
+													<div class="col-sm-4">
+														<div class="form-group">
+															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Provincia:</label>
+															<div class="col-xs-12 col-sm-8">
+																<div class="clearfix">
+																	<select id="select_provincia" name="select_provincia" class="select2" data-placeholder="Provincia...">
+																	</select>
+																</div>
+															</div>
+														</div>
+													</div>
+													<div class="col-sm-4">
+														<div class="form-group">
 															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Ciudad:</label>
 															<div class="col-xs-12 col-sm-8">
 																<div class="clearfix">
-																	<input type="text" style="text-transform:uppercase" name="txt_ciudad" id="txt_ciudad" class="col-xs-12 input-sm"/>
-																</div>
-															</div>
-														</div>
-													</div>
-													<div class="col-sm-4">
-														<div class="form-group">
-															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Barrio:</label>
-															<div class="col-xs-12 col-sm-8">
-																<div class="clearfix">
-																	<input type="text" style="text-transform:uppercase" name="txt_barrio" id="txt_barrio" class="col-xs-12 input-sm"/>
-																</div>
-															</div>
-														</div>
-													</div>
-													<div class="col-sm-4">
-														<div class="form-group">
-															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Sector:</label>
-															<div class="col-xs-12 col-sm-8">
-																<div class="clearfix">
-																	<input type="text" style="text-transform:uppercase" name="txt_sector" id="txt_sector" class="col-xs-12 input-sm"/>
+																	<select id="select_ciudad" name="select_ciudad" class="select2" data-placeholder="Ciudad...">
+																	</select>
 																</div>
 															</div>
 														</div>
@@ -388,14 +391,14 @@
 																<div class="clearfix">
 																	<select id="select_sangre" name="select_sangre" class="select2" data-placeholder="Tipo de Sangre...">
 																		<option value="">&nbsp;</option>
-																		<option value="AL">A+</option>
-																		<option value="AL">A-</option>
-																		<option value="AL">B+</option>
-																		<option value="AL">B-</option>
-																		<option value="AL">AB+</option>
-																		<option value="AL">AB-</option>
-																		<option value="AL">O+</option>
-																		<option value="AL">O-</option>
+																		<option value="A+">A+</option>
+																		<option value="A-">A-</option>
+																		<option value="B+">B+</option>
+																		<option value="B-">B-</option>
+																		<option value="AB+">AB+</option>
+																		<option value="AB-">AB-</option>
+																		<option value="O+">O+</option>
+																		<option value="O-">O-</option>
 																	</select>
 																</div>
 															</div>
@@ -451,8 +454,8 @@
 																<div class="clearfix">
 																	<select id="select_cuenta" name="select_cuenta" class="select2" data-placeholder="Cuenta...">
 																	<option value="">&nbsp;</option>
-																	<option value="">Cuenta Corriente</option>
-																	<option value="">Cuenta de Ahorros</option>
+																	<option value="Cuenta Corriente">Cuenta Corriente</option>
+																	<option value="Cuenta de Ahorros">Cuenta de Ahorros</option>
 																	</select>
 																</div>
 															</div>
@@ -486,8 +489,7 @@
 															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Cargo:</label>
 															<div class="col-xs-12 col-sm-8">
 																<div class="clearfix">
-																	<select id="select_cargo_trab" name="select_cargo_trab" class="select2" data-placeholder="Cargo...">
-																	</select>
+																	<input type="text" name="txt_cargo" id="txt_cargo" class="col-xs-12 input-sm"/>
 																</div>
 															</div>
 														</div>
@@ -634,6 +636,23 @@
 																	<span class="input-group-addon">
 																		<i class="ace-icon fa fa-calendar"></i>
 																	</span>
+																</div>
+															</div>
+														</div>
+														<div class="form-group">
+															<label class="control-label col-xs-12 col-sm-4 no-padding-right" >Area:</label>
+															<div class="col-xs-12 col-sm-8">
+																<div class="clearfix">
+																	<select id="select_areas" name="select_areas" class="select2" data-placeholder="Area...">
+																	</select>
+																</div>
+															</div>
+														</div>
+														<div class="form-group">
+															<label class="control-label col-xs-12 col-sm-2 no-padding-right" >Función o Cargo a Ocupar:</label>
+															<div class="col-xs-12 col-sm-8">
+																<div class="clearfix">
+																	<input type="text" style="text-transform:uppercase" name="txt_cargo_desempe" id="txt_cargo_desempe" class="col-xs-12 input-sm"/>
 																</div>
 															</div>
 														</div>
